cluster/hermes/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hermes
  namespace: hermes
spec:
  serviceName: hermes
  replicas: 1
  selector:
    matchLabels:
      app: hermes
  template:
    metadata:
      labels:
        app: hermes
    spec:
      containers:
      - name: hermes
        image: nousresearch/hermes-agent:v0.21.6
        args: ["dashboard", "--host", "0.0.0.0"]
        imagePullPolicy: IfNotPresent
        ports:
        - name: dashboard
          containerPort: 9119
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /opt/data
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: "2"
            memory: 2Gi
      - name: hermes-gateway
        image: nousresearch/hermes-agent:v0.21.6
        args: ["gateway", "run"]
        imagePullPolicy: IfNotPresent
        ports:
        - name: gateway
          containerPort: 8642
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /opt/data
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: "1"
            memory: 1Gi
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: hermes
